feat: Mailgun adapter with tagging system for Runtime Validator
- Implements Mailgun tagging per official docs
- Tag structure: system:component:category
- Scout alerts with severity levels (info/warning/critical)
- Validation alerts by failure type (link/checkout/semantic)
- Custom variables for advanced tracking
- Full test suite included
- Waiting for private API key to activate

--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
+    "form-data": "^4.0.5",
     "framer-motion": "^11.1.7",
     "geist": "^1.4.2",
     "jsoneditor": "^10.4.2",
     "lodash-es": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.539.0",
+    "mailgun.js": "^12.4.0",
     "motion": "^12.20.2",
     "nanoid": "^5.0.9",
     "next": "^16.0.3",
